Work on slides06 and slides08

--- a/website/lectures/lecture02.qmd
+++ b/website/lectures/lecture02.qmd
@@ -192,7 +192,7 @@ xg_model1
 ::: {.callout-warning}
 ## Generalization
 A key assumption of all XG models is that the observed data is a random sample drawn from the super-population.
-The only women's internationals matches for which StatsBomb data were from the 2019 and 2023 World Cup and the 2022 EURO tournaments.
+The only women's internationals matches for which StatsBomb data were from the 2019 and 2023 World Cup and the 2022 and 2025 EURO tournaments.
 These matches are arguably **not** highly representative of all women's international matches, meaning that we should exercise some caution when using models fitted to these data to analyze matches from other competitions (e.g., an international friendly or a match in a domestic league).
 :::
 
