--- a/website/lectures/lecture11.qmd
+++ b/website/lectures/lecture11.qmd
@@ -168,7 +168,7 @@ A cursory glance at the data reveals such monotonicity is not realistic.
 Specifically, if called strike probability was monotonic in `plate_x` and `plate_z`, then we should see progressively more strikes in one of the four corners of the plot[^prove].
 In the plot, we overlay the "average" rule book strike zone[^avg_rbsz]. 
 ```{r}
-#| label: fit-calls-24
+#| label: fig-calls-24
 #| fig-align: center
 #| fig-width: 5
 #| fig-height: 6
